About topic spacing fixed

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -18,7 +18,7 @@ section#about {
 }
 
 .team-heading{
-  margin-top: 25rem;
+  margin-top: 2rem;
   font-size: 30px;
   font-weight: 500;
 }
